--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kpeti515.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kpeti515.github.io/kpeti515.github.io",
+  "homepage": "https://kpeti515.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
